[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interactables/Readable/Readable.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[node name="ReadableLayer" type="CanvasLayer"]

[node name="Readable" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Content" type="Control" parent="Readable"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -75.0
margin_right = 69.0
margin_bottom = 75.0

[node name="Panel" type="Panel" parent="Readable/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[connection signal="gui_input" from="Readable" to="Readable" method="_on_Readable_gui_input"]
[connection signal="mouse_entered" from="Readable/Content" to="Readable" method="_on_Content_mouse_entered"]
[connection signal="mouse_exited" from="Readable/Content" to="Readable" method="_on_Content_mouse_exited"]
